envoy/griffin_test/envoy/envoy_config.yaml
static_resources:
  listeners:
  - name: ingress
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 50051
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/var/log/envoy_access.log"
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: backend_service
                  retry_policy:
                    retry_on: 'unavailable'
                    num_retries: 2
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: backend_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: local_service2
      endpoints:
      - lb_endpoints:
          endpoint:
            address:
              socket_address:
                address: app
                port_value: 8080
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
  access_log_path: "/dev/stdout"
